doku/tests/compiletest/attrs/missing_example.stderr
error: Unexpected meta-item format `word`
 --> tests/compiletest/attrs/missing_example.rs:5:12
  |
5 |     #[doku(example)]
  |            ^^^^^^^
