doku/tests/compiletest/attrs/missing_example.rs
use doku::Document;

#[derive(Document)]
struct Person {
    #[doku(example)]
    name: String,
}

fn main() {
    //
}
